--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "react-dom": "^16.4.2",
     "react-pose": "^3.2.1",
     "react-scripts": "1.1.5",
-    "styled-components": "^3.4.5"
+    "styled-components": "^3.4.5",
+    "typeface-montserrat": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:extension": "yarn build && rm -r extension && cp -r build extension && cp -a ./info/. ./extension/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
